# jj-workspace

./: CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  README.md  Taskfile.yml  prototype.sh  release-please-config.json
.github/workflows/: ci.yml  release.yml
scripts/: install.sh
src/: app.rs  config.rs  directive.rs  fuzzy.rs  jj.rs  keymap.rs  lib.rs  main.rs  ops.rs  selfupdate.rs  shell.rs  ui.rs
tests/: cli_scripting.rs  e2e_pty.rs  integration.rs  no_repo.rs  perf.rs
tests/common/: mod.rs
