[package]
name = "jw"
version = "0.1.0"
edition = "2024"
description = "Ephemeral picker for jj workspaces (cd-on-exit)"
license = "MIT"
repository = "https://github.com/bfirestone/jj-workspace"
homepage = "https://github.com/bfirestone/jj-workspace"
readme = "README.md"
keywords = ["jujutsu", "jj", "workspace", "tui", "cd"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "jw"
path = "src/main.rs"

[lib]
name = "jw"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
fuzzy-matcher = "0.3"
ansi-to-tui = "7"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
