[package]
name = "jw"
version = "0.4.0"
edition = "2024"
description = "Ephemeral picker for jj workspaces (cd-on-exit)"
license = "MIT"
repository = "https://github.com/bfirestone/jj-workspace"
homepage = "https://github.com/bfirestone/jj-workspace"
readme = "README.md"
keywords = ["jujutsu", "jj", "workspace", "tui", "cd"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "jw"
path = "src/main.rs"

[lib]
name = "jw"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = { version = "0.29", features = ["serde"] }
fuzzy-matcher = "0.3"
ansi-to-tui = "7"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
ureq = "3"
self-replace = "1"
flate2 = "1"
tar = "0.4"
sha2 = "0.11"
semver = "1"
serde_json = "1"
tempfile = "3"

[dev-dependencies]
rexpect = "0.7.1"
